// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-badge value ! 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-badge mg-badge--info">
      !
      <span class="sr-only">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge value ? 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-badge mg-badge--info">
      ?
      <span class="sr-only">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge value 1 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-badge mg-badge--info">
      1
      <span class="sr-only">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge value 100 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-badge mg-badge--info">
      100
      <span class="sr-only">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge variant danger outiline false 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-badge mg-badge--danger">
      1
      <span class="sr-only">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge variant danger outiline true 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-badge mg-badge--danger mg-badge--outline">
      1
      <span class="sr-only">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge variant info outiline false 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-badge mg-badge--info">
      1
      <span class="sr-only">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge variant info outiline true 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-badge mg-badge--info mg-badge--outline">
      1
      <span class="sr-only">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge variant primary outiline false 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-badge mg-badge--primary">
      1
      <span class="sr-only">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge variant primary outiline true 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-badge mg-badge--outline mg-badge--primary">
      1
      <span class="sr-only">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge variant secondary outiline false 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-badge mg-badge--secondary">
      1
      <span class="sr-only">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge variant secondary outiline true 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-badge mg-badge--outline mg-badge--secondary">
      1
      <span class="sr-only">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge variant success outiline false 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-badge mg-badge--success">
      1
      <span class="sr-only">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge variant success outiline true 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-badge mg-badge--outline mg-badge--success">
      1
      <span class="sr-only">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge variant warning outiline false 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-badge mg-badge--warning">
      1
      <span class="sr-only">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge variant warning outiline true 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-badge mg-badge--outline mg-badge--warning">
      1
      <span class="sr-only">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;
